# Trabalho-3

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  server.py
src/core/: __init__.py  settings.py
src/db/: __init__.py  bd.py  db.sqlite3
src/features/temperature/: __init__.py  temp.repository.py  temp_model.py  temp_repository.py  temp_router.py  temp_schema.py  temp_service.py
src/shared/: __init__.py  idgenerate.py
